[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/large_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/dynamic_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/scenes/recipes/page_recipe/page_recipe.gd" type="Script" id=4]
[ext_resource path="res://src/ui/ui_scroll.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/font18.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="PageRecipe" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -140.0
scroll_horizontal_enabled = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertical" type="VBoxContainer" parent="Scroll"]
margin_right = 576.0
margin_bottom = 557.0
custom_constants/separation = 32

[node name="Control" type="Control" parent="Scroll/Vertical"]
margin_right = 576.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 132 )
mouse_filter = 2

[node name="Return" type="Button" parent="Scroll/Vertical/Control"]
margin_left = 14.0
margin_top = 11.0
margin_right = 122.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="Button" parent="Scroll/Vertical/Control"]
margin_left = 448.0
margin_top = 11.0
margin_right = 556.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="PanelContainer" parent="Scroll/Vertical"]
margin_top = 164.0
margin_right = 576.0
margin_bottom = 282.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Vertical/Header"]
margin_right = 576.0
margin_bottom = 118.0

[node name="Name" type="Label" parent="Scroll/Vertical/Header/Vertical"]
margin_right = 576.0
margin_bottom = 76.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Apple Pie"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creator" type="Label" parent="Scroll/Vertical/Header/Vertical"]
margin_top = 80.0
margin_right = 576.0
margin_bottom = 118.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "by David Serrano"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="PanelContainer" parent="Scroll/Vertical"]
margin_top = 314.0
margin_right = 576.0
margin_bottom = 383.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Vertical/Description"]
margin_right = 576.0
margin_bottom = 69.0

[node name="Title" type="Label" parent="Scroll/Vertical/Description/Vertical"]
margin_right = 576.0
margin_bottom = 38.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Description"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Scroll/Vertical/Description/Vertical"]
margin_top = 42.0
margin_right = 576.0
margin_bottom = 69.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "A wonderful meal meant for a king. What can I say?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients" type="PanelContainer" parent="Scroll/Vertical"]
margin_top = 415.0
margin_right = 576.0
margin_bottom = 483.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Vertical/Ingredients"]
margin_right = 576.0
margin_bottom = 68.0

[node name="Title" type="Label" parent="Scroll/Vertical/Ingredients/Vertical"]
margin_right = 576.0
margin_bottom = 38.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Ingredients"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Serving Size" type="Label" parent="Scroll/Vertical/Ingredients/Vertical"]
margin_top = 42.0
margin_right = 576.0
margin_bottom = 64.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 2 )
text = "Serving size: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Scroll/Vertical/Ingredients/Vertical"]
margin_top = 68.0
margin_right = 576.0
margin_bottom = 68.0
custom_constants/separation = 16

[node name="Instructions" type="PanelContainer" parent="Scroll/Vertical"]
margin_top = 515.0
margin_right = 576.0
margin_bottom = 557.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Vertical/Instructions"]
margin_right = 576.0
margin_bottom = 42.0

[node name="Title" type="Label" parent="Scroll/Vertical/Instructions/Vertical"]
margin_right = 576.0
margin_bottom = 38.0
rect_min_size = Vector2( 576, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Instructions"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Scroll/Vertical/Instructions/Vertical"]
margin_top = 42.0
margin_right = 576.0
margin_bottom = 42.0

[node name="Tween" type="Tween" parent="Scroll"]

[connection signal="gui_input" from="Scroll" to="Scroll" method="_on_Scroll_gui_input"]
[connection signal="pressed" from="Scroll/Vertical/Control/Return" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Scroll/Vertical/Control/Edit" to="." method="_on_Edit_pressed"]
