[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/recipes/page_recipe/page_recipe.gd" type="Script" id=4]

[node name="Recipe" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Scroll" type="ScrollContainer" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="Center" type="CenterContainer" parent="Scroll"]

[node name="Vertical" type="VBoxContainer" parent="Scroll/Center"]

[connection signal="visibility_changed" from="." to="." method="_on_PageRecipe_visibility_changed"]
